created a few questions

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q1 Two sum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -65,6 +72,56 @@
     "for idx2, num2 in enumerate(nums[idx1+1:]):\n",
     "    print(idx2, num2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q26 remove duplicates from sorted array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, n in enumerate(nums):\n",
+    "    if n in nums[idx+1:]:\n",
+    "        # nums = nums[:idx]# .append(nums[idx+1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<enumerate object at 0x0000012997096FC0>\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
