--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,45 +82,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums = [1,1,2]"
+    "nums = [1,2,2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "while i < len(nums):\n",
+    "    if nums[i] == nums[i-1]:\n",
+    "        nums.pop(i)\n",
+    "    else:\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for idx, n in enumerate(nums):\n",
-    "    if n in nums[idx+1:]:\n",
-    "        # nums = nums[:idx]# .append(nums[idx+1:])"
+    "nums"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<enumerate object at 0x0000012997096FC0>\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
