--- a/test.ipynb
+++ b/test.ipynb
@@ -127,12 +127,187 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q"
+    "### Q35 Search and insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 6]\n",
+      "1\n",
+      "[3, 4, 6]\n",
+      "1\n",
+      "[4, 6]\n",
+      "1\n",
+      "[6]\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,6]\n",
+    "target = 5\n",
+    "idx = ''\n",
+    "try:\n",
+    "    print(nums.index(target))\n",
+    "except:\n",
+    "    while len(nums) >= 1:\n",
+    "        print(nums)\n",
+    "        if target <= nums[int(len(nums)/2)-1]:\n",
+    "            print('0')\n",
+    "            nums = nums[:int(len(nums)/2)]\n",
+    "            idx += '0'\n",
+    "        else:\n",
+    "            print('1')\n",
+    "            nums = nums[int(len(nums)/2):]\n",
+    "            idx += '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1110'"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,6]\n",
+    "idx = nums.index(4)\n",
+    "\n",
+    "idx"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Q35 plus one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-2\n",
+      "-3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digits = [9,9,9]\n",
+    "\n",
+    "\n",
+    "i = -1\n",
+    "try:\n",
+    "    while digits[i] == 10:\n",
+    "        print(i)\n",
+    "        digits[i] = 0\n",
+    "        digits[i-1] += 1\n",
+    "        i -= 1\n",
+    "except:\n",
+    "    digits.insert(0,1)\n",
+    "    while digits[i] == 10:\n",
+    "        print(i)\n",
+    "        digits[i] = 0\n",
+    "        digits[i-1] += 1\n",
+    "        i -= 1\n",
+    "digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits = [9,9,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits.insert(0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 9, 9, 9]"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
