--- a/test.ipynb
+++ b/test.ipynb
@@ -131,8 +131,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[0,1,|2,3]\n",
+    "[0,|1|,2,|3]\n",
+    "00,01,10,11\n",
+    "------------------\n",
+    "[0,1,2,|3,4,5]\n",
+    "[0,|1,2,|3,4,5]\n",
+    "[0,1,2,|3,4,5]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +172,7 @@
     "except:\n",
     "    while len(nums) >= 1:\n",
     "        print(nums)\n",
-    "        if target <= nums[int(len(nums)/2)-1]:\n",
+    "        if target < nums[int(len(nums)/2)-1]:\n",
     "            print('0')\n",
     "            nums = nums[:int(len(nums)/2)]\n",
     "            idx += '0'\n",
@@ -167,26 +180,6 @@
     "            print('1')\n",
     "            nums = nums[int(len(nums)/2):]\n",
     "            idx += '1'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1110'"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "idx"
    ]
   },
   {
@@ -301,6 +294,13 @@
    ],
    "source": [
     "digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q"
    ]
   },
   {
