--- a/test.ipynb
+++ b/test.ipynb
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q35 plus one"
+    "### Q66 plus one"
    ]
   },
   {
@@ -300,7 +300,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q"
+    "### Q88 Merge Sorted Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 2, 3, 5, 6]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1 = [1,2,3,0,0,0]\n",
+    "m = 3\n",
+    "nums2 = [2,5,6]\n",
+    "n = 3\n",
+    "nums1 = nums1[:m] + nums2\n",
+    "nums1.sort()\n",
+    "nums1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 2, 3, 0, 0]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1 = [1,2,3,0,0,0]\n",
+    "idx2 = 0\n",
+    "idx1 = 2\n",
+    "nums1[idx1+1:] = nums1[idx1:-1]\n",
+    "nums1[idx1] = nums2[idx2]\n",
+    "nums1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums1 = [1,2,3,0,0,0]\n",
+    "m = 3\n",
+    "nums2 = [2,5,6]\n",
+    "n = 3\n",
+    "for idx2 in range(n):\n",
+    "    print(idx2)\n",
+    "    for idx1 in range(m+n):\n",
+    "        # print(idx1)\n",
+    "        if nums2[idx2] < nums1[idx1]:\n",
+    "            # nums1.insert(idx1,nums2[idx2]).pop()\n",
+    "            nums1[idx1+1:] = nums1[idx1:-1]\n",
+    "            nums1[idx1] = nums2[idx2] \n",
+    "            break  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 2, 3, 0, 0]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1"
    ]
   },
   {
