--- a/test.ipynb
+++ b/test.ipynb
@@ -356,31 +356,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "idx2 0\n",
+      "0 pass\n",
+      "1 pass\n",
+      "idx2 1\n",
+      "2 pass\n",
+      "3 pass\n",
+      "4 pass\n",
+      "5 pass\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m filled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filled:\n\u001b[1;32m---> 10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mnums1\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx1\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m nums2[idx2]:\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28mprint\u001b[39m(idx1, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m         idx1 \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -389,29 +390,38 @@
     "m = 3\n",
     "nums2 = [2,5,6]\n",
     "n = 3\n",
+    "idx1 = 0\n",
     "for idx2 in range(n):\n",
-    "    print(idx2)\n",
-    "    for idx1 in range(m+n):\n",
-    "        # print(idx1)\n",
-    "        if nums2[idx2] < nums1[idx1]:\n",
+    "    print('idx2', idx2)\n",
+    "    filled = False\n",
+    "    while not filled:\n",
+    "        if nums1[idx1] <= nums2[idx2]:\n",
+    "            print(idx1, 'pass')\n",
+    "            idx1 += 1\n",
+    "        # elif nums2[idx2] < nums1[idx1]:\n",
+    "        elif (nums1[idx1] > nums2[idx2]) & (nums1[idx1] <= nums1[idx1+1]):\n",
     "            # nums1.insert(idx1,nums2[idx2]).pop()\n",
     "            nums1[idx1+1:] = nums1[idx1:-1]\n",
-    "            nums1[idx1] = nums2[idx2] \n",
-    "            break  "
+    "            nums1[idx1] = nums2[idx2]\n",
+    "            print(idx1, 'insert') \n",
+    "            idx1 += 1\n",
+    "            filled = True\n",
+    "        else:\n",
+    "            filled = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 2, 3, 0, 0]"
+       "[1, 2, 2, 3, 5, 6]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +435,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[-1,0,0,3,3,3,0,0,0]\n",
+    "6\n",
+    "[1,2,2]\n",
+    "3"
+   ]
   }
  ],
  "metadata": {
