--- a/test.ipynb
+++ b/test.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[1, 2, 2, 3, 5, 6]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "[1, 2, 2, 3, 0, 0]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,21 +356,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "idx2 0\n",
-      "0 pass\n",
-      "1 pass\n",
-      "idx2 1\n",
-      "2 pass\n",
-      "3 pass\n",
-      "4 pass\n",
-      "5 pass\n"
+      "pt1:  0\n",
+      "pt2:  0\n",
+      "nums1 element:  1\n",
+      "nums2 element:  2\n",
+      "[1, 2, 3, 0, 0, 0]\n",
+      "pt1:  1\n",
+      "pt2:  0\n",
+      "nums1 element:  2\n",
+      "nums2 element:  2\n",
+      "[1, 2, 3, 0, 0, 0]\n",
+      "pt1:  2\n",
+      "pt2:  0\n",
+      "nums1 element:  3\n",
+      "nums2 element:  2\n",
+      "[1, 2, 2, 3, 0, 0]\n",
+      "pt1:  3\n",
+      "pt2:  1\n",
+      "nums1 element:  3\n",
+      "nums2 element:  5\n",
+      "[1, 2, 2, 3, 0, 0]\n",
+      "pt1:  4\n",
+      "pt2:  1\n",
+      "nums1 element:  0\n",
+      "nums2 element:  5\n",
+      "[1, 2, 2, 3, 0, 0]\n",
+      "pt1:  5\n",
+      "pt2:  1\n",
+      "nums1 element:  0\n",
+      "nums2 element:  5\n",
+      "[1, 2, 2, 3, 0, 0]\n",
+      "pt1:  6\n",
+      "pt2:  1\n"
      ]
     },
     {
@@ -380,7 +404,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m filled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filled:\n\u001b[1;32m---> 10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mnums1\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx1\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m nums2[idx2]:\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28mprint\u001b[39m(idx1, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m         idx1 \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "Cell \u001b[1;32mIn[5], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpt1: \u001b[39m\u001b[38;5;124m'\u001b[39m, pt1)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpt2: \u001b[39m\u001b[38;5;124m'\u001b[39m, pt2)\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnums1 element: \u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mnums1\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpt1\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnums2 element: \u001b[39m\u001b[38;5;124m'\u001b[39m, nums2[pt2])\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nums1[pt1] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m nums2[pt2]:\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -390,38 +414,99 @@
     "m = 3\n",
     "nums2 = [2,5,6]\n",
     "n = 3\n",
-    "idx1 = 0\n",
-    "for idx2 in range(n):\n",
-    "    print('idx2', idx2)\n",
-    "    filled = False\n",
-    "    while not filled:\n",
-    "        if nums1[idx1] <= nums2[idx2]:\n",
-    "            print(idx1, 'pass')\n",
-    "            idx1 += 1\n",
-    "        # elif nums2[idx2] < nums1[idx1]:\n",
-    "        elif (nums1[idx1] > nums2[idx2]) & (nums1[idx1] <= nums1[idx1+1]):\n",
-    "            # nums1.insert(idx1,nums2[idx2]).pop()\n",
-    "            nums1[idx1+1:] = nums1[idx1:-1]\n",
-    "            nums1[idx1] = nums2[idx2]\n",
-    "            print(idx1, 'insert') \n",
-    "            idx1 += 1\n",
-    "            filled = True\n",
-    "        else:\n",
-    "            filled = True"
+    "pt1 = 0\n",
+    "pt2 = 0\n",
+    "# nums1end = nums1[m-1]\n",
+    "while pt2 < n:\n",
+    "    print('pt1: ', pt1)\n",
+    "    print('pt2: ', pt2)\n",
+    "    print('nums1 element: ', nums1[pt1])\n",
+    "    print('nums2 element: ', nums2[pt2])\n",
+    "    if nums1[pt1] <= nums2[pt2]:\n",
+    "        pt1 += 1\n",
+    "    else:\n",
+    "        nums1[pt1+1:] = nums1[pt1:-1]\n",
+    "        nums1[pt1] = nums2[pt2]\n",
+    "        pt1 += 1\n",
+    "        pt2 += 1\n",
+    "    print(nums1)\n",
+    "nums1[pt1-1:] = nums2[pt2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 2, 3, 5, 6]"
+       "[1, 2, 2, 3, 0, 0]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 0, 0, 3, 3, 3, 0, 0, 0]\n",
+      "[-1, 0, 0, 3, 3, 3, 0, 0, 0]\n",
+      "[-1, 0, 0, 3, 3, 3, 0, 0, 0]\n",
+      "[-1, 0, 0, 1, 3, 3, 3, 0, 0]\n",
+      "[-1, 0, 0, 1, 2, 3, 3, 3, 0]\n",
+      "[-1, 0, 0, 1, 2, 2, 3, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums1 = [-1,0,0,3,3,3,0,0,0]\n",
+    "m = 6\n",
+    "nums2 = [1,2,2]\n",
+    "n = 3\n",
+    "pt1 = 0\n",
+    "pt2 = 0\n",
+    "# nums1end = nums1[m-1]\n",
+    "while pt2 < n:\n",
+    "    # print('pt1: ', pt1)\n",
+    "    # print('pt2: ', pt2)\n",
+    "    # print('nums1 element: ', nums1[pt1])\n",
+    "    # print('nums2 element: ', nums2[pt2])\n",
+    "    if nums1[pt1] <= nums2[pt2]:\n",
+    "        pt1 += 1\n",
+    "    else:\n",
+    "        nums1[pt1+1:] = nums1[pt1:-1]\n",
+    "        nums1[pt1] = nums2[pt2]\n",
+    "        pt1 += 1\n",
+    "        pt2 += 1\n",
+    "    print(nums1)\n",
+    "# nums1[pt1-1:] = nums2[pt2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, 0, 0, 1, 2, 2, 3, 3, 3]"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,12 +520,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "[-1,0,0,3,3,3,0,0,0]\n",
-    "6\n",
-    "[1,2,2]\n",
-    "3"
+    "### Q292 Nim Game"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
