--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q1 Two sum"
+    "### Q1 Two sum\n",
+    "done"
    ]
   },
   {
@@ -77,8 +78,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q26 remove duplicates from sorted array"
+    "### Q26 remove duplicates from sorted array\n",
+    "done"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -128,19 +137,6 @@
    "metadata": {},
    "source": [
     "### Q35 Search and insert"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[0,1,|2,3]\n",
-    "[0,|1|,2,|3]\n",
-    "00,01,10,11\n",
-    "------------------\n",
-    "[0,1,2,|3,4,5]\n",
-    "[0,|1,2,|3,4,5]\n",
-    "[0,1,2,|3,4,5]"
    ]
   },
   {
@@ -209,7 +205,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q66 plus one"
+    "### Q66 plus one\n",
+    "done"
    ]
   },
   {
@@ -300,137 +297,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q88 Merge Sorted Array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 3, 5, 6]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nums1 = [1,2,3,0,0,0]\n",
-    "m = 3\n",
-    "nums2 = [2,5,6]\n",
-    "n = 3\n",
-    "nums1 = nums1[:m] + nums2\n",
-    "nums1.sort()\n",
-    "nums1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 3, 0, 0]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nums1 = [1,2,3,0,0,0]\n",
-    "idx2 = 0\n",
-    "idx1 = 2\n",
-    "nums1[idx1+1:] = nums1[idx1:-1]\n",
-    "nums1[idx1] = nums2[idx2]\n",
-    "nums1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pt1:  0\n",
-      "pt2:  0\n",
-      "nums1 element:  1\n",
-      "nums2 element:  2\n",
-      "[1, 2, 3, 0, 0, 0]\n",
-      "pt1:  1\n",
-      "pt2:  0\n",
-      "nums1 element:  2\n",
-      "nums2 element:  2\n",
-      "[1, 2, 3, 0, 0, 0]\n",
-      "pt1:  2\n",
-      "pt2:  0\n",
-      "nums1 element:  3\n",
-      "nums2 element:  2\n",
-      "[1, 2, 2, 3, 0, 0]\n",
-      "pt1:  3\n",
-      "pt2:  1\n",
-      "nums1 element:  3\n",
-      "nums2 element:  5\n",
-      "[1, 2, 2, 3, 0, 0]\n",
-      "pt1:  4\n",
-      "pt2:  1\n",
-      "nums1 element:  0\n",
-      "nums2 element:  5\n",
-      "[1, 2, 2, 3, 0, 0]\n",
-      "pt1:  5\n",
-      "pt2:  1\n",
-      "nums1 element:  0\n",
-      "nums2 element:  5\n",
-      "[1, 2, 2, 3, 0, 0]\n",
-      "pt1:  6\n",
-      "pt2:  1\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpt1: \u001b[39m\u001b[38;5;124m'\u001b[39m, pt1)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpt2: \u001b[39m\u001b[38;5;124m'\u001b[39m, pt2)\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnums1 element: \u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mnums1\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpt1\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnums2 element: \u001b[39m\u001b[38;5;124m'\u001b[39m, nums2[pt2])\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nums1[pt1] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m nums2[pt2]:\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "nums1 = [1,2,3,0,0,0]\n",
-    "m = 3\n",
-    "nums2 = [2,5,6]\n",
-    "n = 3\n",
-    "pt1 = 0\n",
-    "pt2 = 0\n",
-    "# nums1end = nums1[m-1]\n",
-    "while pt2 < n:\n",
-    "    print('pt1: ', pt1)\n",
-    "    print('pt2: ', pt2)\n",
-    "    print('nums1 element: ', nums1[pt1])\n",
-    "    print('nums2 element: ', nums2[pt2])\n",
-    "    if nums1[pt1] <= nums2[pt2]:\n",
-    "        pt1 += 1\n",
-    "    else:\n",
-    "        nums1[pt1+1:] = nums1[pt1:-1]\n",
-    "        nums1[pt1] = nums2[pt2]\n",
-    "        pt1 += 1\n",
-    "        pt2 += 1\n",
-    "    print(nums1)\n",
-    "nums1[pt1-1:] = nums2[pt2:]"
+    "### Q88 Merge Sorted Array\n",
+    "done"
    ]
   },
   {
@@ -441,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 2, 3, 0, 0]"
+       "[1, 2, 2, 3, 5, 6]"
       ]
      },
      "execution_count": 6,
@@ -450,77 +318,14 @@
     }
    ],
    "source": [
-    "nums1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1, 0, 0, 3, 3, 3, 0, 0, 0]\n",
-      "[-1, 0, 0, 3, 3, 3, 0, 0, 0]\n",
-      "[-1, 0, 0, 3, 3, 3, 0, 0, 0]\n",
-      "[-1, 0, 0, 1, 3, 3, 3, 0, 0]\n",
-      "[-1, 0, 0, 1, 2, 3, 3, 3, 0]\n",
-      "[-1, 0, 0, 1, 2, 2, 3, 3, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "nums1 = [-1,0,0,3,3,3,0,0,0]\n",
-    "m = 6\n",
-    "nums2 = [1,2,2]\n",
+    "nums1 = [1,2,3,0,0,0]\n",
+    "m = 3\n",
+    "nums2 = [2,5,6]\n",
     "n = 3\n",
-    "pt1 = 0\n",
-    "pt2 = 0\n",
-    "# nums1end = nums1[m-1]\n",
-    "while pt2 < n:\n",
-    "    # print('pt1: ', pt1)\n",
-    "    # print('pt2: ', pt2)\n",
-    "    # print('nums1 element: ', nums1[pt1])\n",
-    "    # print('nums2 element: ', nums2[pt2])\n",
-    "    if nums1[pt1] <= nums2[pt2]:\n",
-    "        pt1 += 1\n",
-    "    else:\n",
-    "        nums1[pt1+1:] = nums1[pt1:-1]\n",
-    "        nums1[pt1] = nums2[pt2]\n",
-    "        pt1 += 1\n",
-    "        pt2 += 1\n",
-    "    print(nums1)\n",
-    "# nums1[pt1-1:] = nums2[pt2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-1, 0, 0, 1, 2, 2, 3, 3, 3]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "nums1[m:] = nums2\n",
+    "nums1.sort()\n",
     "nums1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
