--- a/test.ipynb
+++ b/test.ipynb
@@ -14,8 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q1 Two sum\n",
-    "done"
+    "### Q1 Two sum - [x]"
    ]
   },
   {
@@ -78,16 +77,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q26 remove duplicates from sorted array\n",
-    "done"
+    "### Q26 remove duplicates from sorted array - [x]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -136,46 +127,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q35 Search and insert"
+    "### Q35 Search and insert -[x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 6]\n",
-      "1\n",
-      "[3, 4, 6]\n",
-      "1\n",
-      "[4, 6]\n",
-      "1\n",
-      "[6]\n",
-      "0\n"
+      "4\n"
      ]
     }
    ],
    "source": [
-    "nums = [1,2,3,4,6]\n",
-    "target = 5\n",
-    "idx = ''\n",
-    "try:\n",
-    "    print(nums.index(target))\n",
-    "except:\n",
-    "    while len(nums) >= 1:\n",
-    "        print(nums)\n",
-    "        if target < nums[int(len(nums)/2)-1]:\n",
-    "            print('0')\n",
-    "            nums = nums[:int(len(nums)/2)]\n",
-    "            idx += '0'\n",
-    "        else:\n",
-    "            print('1')\n",
-    "            nums = nums[int(len(nums)/2):]\n",
-    "            idx += '1'"
+    "nums = [1,3,5,6]\n",
+    "target = 7\n",
+    "for idx, num in enumerate(nums):\n",
+    "    if num < target:\n",
+    "        pass\n",
+    "    else:\n",
+    "        print(idx)\n",
+    "        break\n",
+    "print(len(nums))"
    ]
   },
   {
@@ -205,8 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q66 plus one\n",
-    "done"
+    "### Q66 plus one - [x]"
    ]
   },
   {
@@ -297,8 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q88 Merge Sorted Array\n",
-    "done"
+    "### Q88 Merge Sorted Array - [x]"
    ]
   },
   {
