--- a/test.ipynb
+++ b/test.ipynb
@@ -306,7 +306,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q292 Nim Game"
+    "### Q118 Pascals Triangle -[x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1]\n",
+      "[1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = []\n",
+    "n = 5\n",
+    "for i in range(n):\n",
+    "    line = [1] * (i+1)\n",
+    "    output.append(line)\n",
+    "for i in range(2,n):\n",
+    "    # print(output[i])\n",
+    "    output[i] = [1] + [sum(x) for x in zip(output[i-1][:-1], output[i-1][1:])] + [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 3, 1]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = [1,2,1]\n",
+    "[1] + [sum(x) for x in zip(output[:-1], output[1:])] + [1]"
    ]
   },
   {
@@ -314,6 +381,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q292 Nim Game -[x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not (10 % 4 == 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
