--- a/test.ipynb
+++ b/test.ipynb
@@ -306,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q118 Pascals Triangle -[x]"
+    "### Q118 & Q119 Pascals Triangle -[x]"
    ]
   },
   {
@@ -357,23 +357,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 3, 1]"
+       "[1, 2, 1]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = [1,2,1]\n",
+    "output = [1,1]\n",
     "[1] + [sum(x) for x in zip(output[:-1], output[1:])] + [1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q121 Best Time to Buy and Sell Stock -[]"
    ]
   },
   {
