--- a/test.ipynb
+++ b/test.ipynb
@@ -385,16 +385,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prices = [7,1,5,3,6,4]\n",
+    "profit = 0\n",
+    "buy = 0\n",
+    "sell = 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-6, -2, -4, -1, -3]\n",
+      "[4, 2, 5, 3]\n",
+      "[-2, 1, -1]\n",
+      "[3, 1]\n",
+      "[-2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for idx, cv in enumerate(prices[:-1]):\n",
+    "    diff = list(map(lambda x: x - cv, prices[idx+1:]))\n",
+    "    print(diff)\n",
+    "    diff_max = max(diff)\n",
+    "    if diff_max > profit:\n",
+    "        profit = diff_max\n",
+    "profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 2, 6, 4, 7, 5]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
